update contact info, some sub headers, misc

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </p>
         <form id="hero__form">
           <input
-            placeholder="YOUR EMAIL ADDRESS"
+            placeholder="SEND AN EMAIL FOR ANY ENQUIRY"
             type="email"
             inputmode="email"
             name="hero__email"
@@ -141,7 +141,7 @@
             class="input"
             class="btn btn--primary"
           />
-          <button class="btn btn--primary" type="submit">I want in</button>
+          <button class="btn btn--primary" type="submit">SEND EMAIL</button>
         </form>
       </div>
       <div class="social-icons">
@@ -220,7 +220,7 @@
       </section>
       <section class="container" id="services">
         <h1 class="head-text">WHAT WE DO</h1>
-        <p class="subtext">we know things too, we're fancy!</p>
+        <p class="subtext">service that we offer to you.</p>
         <div class="service-list">
           <figure class="service card service--active">
             <img
@@ -331,7 +331,7 @@
           <li class="list__item"></li>
         </div>
       </section>
-      <section class="container" id="team">
+      <!-- <section class="container" id="team">
         <h1 class="head-text">MEET THE BRAINS</h1>
         <p class="subtext">Sad and highly motivated pack of kayotes!</p>
         <div class="card team--card">
@@ -367,7 +367,7 @@
             </figcaption>
           </figure>
         </div>
-      </section>
+      </section> -->
       <section class="container flex--col" id="map">
         <h1 class="head-text">GET IN TOUCH</h1>
         <p class="subtext">Call us, email us, do you!</p>
@@ -380,8 +380,8 @@
             />
             <h4>Contact</h4>
             <p>
-              079 234 567 <br />
-              lutho.spambo@meritbranding.co.za
+              072 117 2942 <br />
+              meritbrandinglto@gmail.co.za
             </p>
             <div class="social-icons">
               <a href="https://www.instagram.com/meritbrandinglto/" class="icon"
@@ -407,7 +407,7 @@
               331 West Street, <br />
               Durban, KZN
             </p>
-            <button id="btnShowMap" class="link link--more">view map</button>
+            <a href="https://goo.gl/maps/EoWUaBHia5fyz1eu9" target="_blank" id="btnShowMap" class="link link--more">view map</a>
           </div>
         </div>
       </section>
