Update footer and misc

--- a/index.html
+++ b/index.html
@@ -200,10 +200,21 @@
               <h4 class="card__head">
                 Our Solutions
               </h4>
-              <details class="card__body">
+              <!-- <details class="card__body">
                 <summary>
                   Graphic design is our bandage, software is the medicine, and
                   we're the doctors.
+                </summary>
+                <p>
+                  We'll help you realize your vision through media, from logos,
+                  to websites. The mission is to Utitlizing bleeding edge
+                  technology.
+                </p>
+              </details> -->
+              <details class="card__body">
+                <summary>
+                  Design letter heads, pragrams and websites for individuals and
+                  companies.
                 </summary>
                 <p>
                   We'll help you realize your vision through media, from logos,
@@ -407,7 +418,13 @@
               331 West Street, <br />
               Durban, KZN
             </p>
-            <a href="https://goo.gl/maps/EoWUaBHia5fyz1eu9" target="_blank" id="btnShowMap" class="link link--more">view map</a>
+            <a
+              href="https://goo.gl/maps/EoWUaBHia5fyz1eu9"
+              target="_blank"
+              id="btnShowMap"
+              class="link link--more"
+              >view map</a
+            >
           </div>
         </div>
       </section>
@@ -448,16 +465,23 @@
         <a
           target="_blank"
           rel="no-referrer"
-          href="https://facebook.com/meritbrandiglto"
+          href="https://www.instagram.com/meritbrandinglto"
           class="link footer__link"
-          >Facebook</a
+          >Instagram</a
         >
         <a
           target="_blank"
           rel="no-referrer"
-          href="https://www.instagram.com/meritbrandinglto"
+          href="https://za.pinterest.com/meritbrandiglto"
           class="link footer__link"
-          >Instagram</a
+          >Pinterest</a
+        >
+        <a
+          target="_blank"
+          rel="no-referrer"
+          href="https://Twitter.com/meritbrandiglto"
+          class="link footer__link"
+          >Twitter</a
         >
         <a
           target="_blank"
@@ -477,6 +501,13 @@
         >
       </div>
       <div class="footer__group">
+        <a
+          target="_blank"
+          rel="no-referrer"
+          href="https://facebook.com/meritbrandiglto"
+          class="link footer__link"
+          >Facebook</a
+        >
         <a
           target="_blank"
           rel="no-referrer"
