Change developer website link

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
         <a
           target="_blank"
           rel="no-referrer"
-          href="https://swssr.com"
+          href="https://swssr.co"
           class="link footer__link"
           >developer</a
         >
